fix: layout shift

--- a/frappe/public/scss/style.scss
+++ b/frappe/public/scss/style.scss
@@ -175,9 +175,6 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-	.page-container .page-body {
-		max-width: calc(100% - 250px) !important;
-	}
 	.main-section {
 		padding-left: 148px !important;
 	}
